
CHANGELOG

Boost V1.74:
  - Fixed TRAC #10733: Hooks not called for expanding specific predefined macros
  - Fixed #58: C++11 long long literals must use consistent case
  - Repaired two samples and added a new one for macro naming enforcement
  - Implemented C++20 changes for variadic macros, including __VA_OPT__()
  - Added C++17 feature __has_include()

Boost V1.73:
  - Fixed TRAC #7822: waveidl sample does not use the IDL lexer
  - Fixed TRAC #9874: Turning off 'include_next' support breaks include
  - Fixed a typedef shadowing a class (MSVC warning 4458) - Conrad Poelman
  - Updated waveidl to match recent changes in the RE2C lexer
  - Samples now build cleanly
  - Ensured samples and wave driver are covered by continuous integration

Boost V1.55:
 - Fixed #8848: Wave driver improperly processes 0xFFFFui64 token
 - Fixed #9098: Wave driver option --c++0x invalid

Boost V1.54:
 - Fixed #8478: Make Boost.wave compatible with Clang's -Wimplicit-fallthrough
   diagnostic.

Boost V1.53:
 - Fixed a problem with context<>::add_macro_definition which sometimes
   appended a superfluous T_EOF to the macro replacement list.

Boost V1.52.0:
 - Added util::create_directories() wrapper to account for new behavior of
   boost::filesystem::create_directories().
 - Fixed an obscure problem when preprocessing directives wouldn't be recognized
   if the previous line contained nothing but an empty macro invocation
   (see new test case t_9_023.cpp)
 - Added a new command line option --license=<file> to the Wave driver tool
   which allows to pre-pend the content of a (license) file to every newly
   created file. This option simplifies the implementation of partial
   preprocessing as done on Phoenix, Fusion, etc.
 - Changed the effect of the -N command line option to simply not expand
   the macro by pretending it was not defined. Earlier the whole invocation
   sequence was skipped, now we skip only the macro itself, which still expands