@@ -244,6 +244,8 @@ even if these do not have the <span class="literal">'ll'</span> suffix.</p>
   where the <span class="string">'...somthing'</span> is a hint, which grammars 
   are explicitly instantiated inside. By using the separation model the compilation
   times required to build the <tt>Wave</tt> example are dropped by up to 90%.</p>
+<P dir="ltr"><b><a name="compiler_requirements"></a>Compiler Requirements</b></P>
+<p>Beginning with version 1.77, Wave will require building with C++11 features, and will no longer support the use of older compilers. However, Wave will continue to <em>emulate</em> the features of older preprocessors indefinitely.<p>
 <table border="0">
   <tr> 
     <td width="10"></td>
